--- a/VPR19_RECON.ipynb
+++ b/VPR19_RECON.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled0.ipynb",
+      "name": "VPR19_RECON.ipynb",
       "provenance": [],
       "authorship_tag": "ABX9TyP9xqZ+Dk5cu1OERz6OGGkH",
       "include_colab_link": true
@@ -29,291 +29,85 @@
       "metadata": {
         "id": "37zAY-l1k28X",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 369
-        },
-        "outputId": "04a8de8b-4f5c-4af2-b676-7268f3c54494"
+        "colab": {}
       },
       "source": [
         "!sudo add-apt-repository ppa:alex-p/tesseract-ocr"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "  The Tesseract OCR engine was one of the top 3 engines in the 1995\n",
-            " UNLV Accuracy test. Between 1995 and 2006 it had little work done on\n",
-            " it, but since then it has been improved extensively by Google and is\n",
-            " probably one of the most accurate open source OCR engines\n",
-            " available. It can read a wide variety of image formats and convert\n",
-            " them to text in over 40 languages. This package includes the command\n",
-            " line tool.\n",
-            " More info: https://launchpad.net/~alex-p/+archive/ubuntu/tesseract-ocr\n",
-            "Press [ENTER] to continue or Ctrl-c to cancel adding it.\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/usr/bin/add-apt-repository\", line 158, in <module>\n",
-            "    sys.stdin.readline()\n",
-            "KeyboardInterrupt\n",
-            "\n",
-            "During handling of the above exception, another exception occurred:\n",
-            "\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/usr/bin/add-apt-repository\", line 158, in <module>\n",
-            "    sys.stdin.readline()\n",
-            "KeyboardInterrupt\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Oko_EppHlOqz",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 527
-        },
-        "outputId": "2706649d-1bbf-4135-859e-b078c8a75468"
+        "colab": {}
       },
       "source": [
         "!sudo apt-get update\n"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\r0% [Working]\r            \rIgn:1 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
-            "\r0% [Waiting for headers] [Waiting for headers] [Waiting for headers] [Waiting f\r                                                                               \rGet:2 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran35/ InRelease [3,626 B]\n",
-            "\r0% [Waiting for headers] [Waiting for headers] [2 InRelease 3,626 B/3,626 B 100\r0% [Waiting for headers] [Waiting for headers] [Waiting for headers] [Waiting f\r                                                                               \rHit:3 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
-            "\r0% [Waiting for headers] [Waiting for headers] [Waiting for headers] [Connectin\r0% [2 InRelease gpgv 3,626 B] [Waiting for headers] [Waiting for headers] [Wait\r                                                                               \rGet:4 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
-            "\r0% [2 InRelease gpgv 3,626 B] [Waiting for headers] [4 InRelease 14.2 kB/88.7 k\r                                                                               \rHit:5 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
-            "\r0% [2 InRelease gpgv 3,626 B] [Waiting for headers] [4 InRelease 14.2 kB/88.7 k\r                                                                               \rIgn:6 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
-            "\r0% [2 InRelease gpgv 3,626 B] [Waiting for headers] [4 InRelease 14.2 kB/88.7 k\r                                                                               \rGet:7 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release [697 B]\n",
-            "\r0% [2 InRelease gpgv 3,626 B] [Waiting for headers] [4 InRelease 14.2 kB/88.7 k\r                                                                               \rGet:8 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release [564 B]\n",
-            "\r0% [2 InRelease gpgv 3,626 B] [Waiting for headers] [4 InRelease 14.2 kB/88.7 k\r0% [2 InRelease gpgv 3,626 B] [Waiting for headers] [4 InRelease 14.2 kB/88.7 k\r                                                                               \rGet:9 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release.gpg [836 B]\n",
-            "\r0% [2 InRelease gpgv 3,626 B] [Waiting for headers] [4 InRelease 14.2 kB/88.7 k\r0% [2 InRelease gpgv 3,626 B] [Waiting for headers] [4 InRelease 14.2 kB/88.7 k\r                                                                               \rGet:10 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release.gpg [833 B]\n",
-            "\r0% [2 InRelease gpgv 3,626 B] [Waiting for headers] [4 InRelease 14.2 kB/88.7 k\r0% [2 InRelease gpgv 3,626 B] [Waiting for headers] [4 InRelease 14.2 kB/88.7 k\r                                                                               \rGet:11 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
-            "\r0% [2 InRelease gpgv 3,626 B] [11 InRelease 1,156 B/88.7 kB 1%] [4 InRelease 43\r0% [11 InRelease 15.6 kB/88.7 kB 18%] [4 InRelease 43.1 kB/88.7 kB 49%] [Waitin\r0% [3 InRelease gpgv 21.3 kB] [11 InRelease 15.6 kB/88.7 kB 18%] [4 InRelease 4\r                                                                               \rGet:12 http://ppa.launchpad.net/marutter/c2d4u3.5/ubuntu bionic InRelease [15.4 kB]\n",
-            "\r0% [3 InRelease gpgv 21.3 kB] [11 InRelease 15.6 kB/88.7 kB 18%] [4 InRelease 4\r0% [3 InRelease gpgv 21.3 kB] [11 InRelease 47.5 kB/88.7 kB 54%] [4 InRelease 5\r                                                                               \rGet:13 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran35/ Packages [93.7 kB]\n",
-            "Get:14 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
-            "Ign:15 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Packages\n",
-            "Get:15 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Packages [214 kB]\n",
-            "Get:16 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Packages [41.2 kB]\n",
-            "Get:17 http://ppa.launchpad.net/marutter/c2d4u3.5/ubuntu bionic/main Sources [1,845 kB]\n",
-            "Get:18 http://security.ubuntu.com/ubuntu bionic-security/main amd64 Packages [1,003 kB]\n",
-            "Get:19 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [1,406 kB]\n",
-            "Get:20 http://security.ubuntu.com/ubuntu bionic-security/universe amd64 Packages [869 kB]\n",
-            "Get:21 http://security.ubuntu.com/ubuntu bionic-security/multiverse amd64 Packages [9,282 B]\n",
-            "Get:22 http://security.ubuntu.com/ubuntu bionic-security/restricted amd64 Packages [89.0 kB]\n",
-            "Get:23 http://archive.ubuntu.com/ubuntu bionic-updates/multiverse amd64 Packages [13.6 kB]\n",
-            "Get:24 http://archive.ubuntu.com/ubuntu bionic-updates/restricted amd64 Packages [102 kB]\n",
-            "Get:25 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [1,302 kB]\n",
-            "Get:26 http://ppa.launchpad.net/marutter/c2d4u3.5/ubuntu bionic/main amd64 Packages [890 kB]\n",
-            "Fetched 8,151 kB in 2s (3,336 kB/s)\n",
-            "Reading package lists... Done\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "hJ-LPwimlaAA",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 686
-        },
-        "outputId": "f6af5032-e564-4e15-f055-03dc2e77c8d7"
+        "colab": {}
       },
       "source": [
         "!sudo apt install tesseract-ocr\n"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Reading package lists... Done\n",
-            "Building dependency tree       \n",
-            "Reading state information... Done\n",
-            "The following package was automatically installed and is no longer required:\n",
-            "  libnvidia-common-440\n",
-            "Use 'sudo apt autoremove' to remove it.\n",
-            "The following additional packages will be installed:\n",
-            "  tesseract-ocr-eng tesseract-ocr-osd\n",
-            "The following NEW packages will be installed:\n",
-            "  tesseract-ocr tesseract-ocr-eng tesseract-ocr-osd\n",
-            "0 upgraded, 3 newly installed, 0 to remove and 77 not upgraded.\n",
-            "Need to get 4,795 kB of archives.\n",
-            "After this operation, 15.8 MB of additional disk space will be used.\n",
-            "Get:1 http://archive.ubuntu.com/ubuntu bionic/universe amd64 tesseract-ocr-eng all 4.00~git24-0e00fe6-1.2 [1,588 kB]\n",
-            "Get:2 http://archive.ubuntu.com/ubuntu bionic/universe amd64 tesseract-ocr-osd all 4.00~git24-0e00fe6-1.2 [2,989 kB]\n",
-            "Get:3 http://archive.ubuntu.com/ubuntu bionic/universe amd64 tesseract-ocr amd64 4.00~git2288-10f4998a-2 [218 kB]\n",
-            "Fetched 4,795 kB in 1s (4,643 kB/s)\n",
-            "debconf: unable to initialize frontend: Dialog\n",
-            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 76, <> line 3.)\n",
-            "debconf: falling back to frontend: Readline\n",
-            "debconf: unable to initialize frontend: Readline\n",
-            "debconf: (This frontend requires a controlling tty.)\n",
-            "debconf: falling back to frontend: Teletype\n",
-            "dpkg-preconfigure: unable to re-open stdin: \n",
-            "Selecting previously unselected package tesseract-ocr-eng.\n",
-            "(Reading database ... 144379 files and directories currently installed.)\n",
-            "Preparing to unpack .../tesseract-ocr-eng_4.00~git24-0e00fe6-1.2_all.deb ...\n",
-            "Unpacking tesseract-ocr-eng (4.00~git24-0e00fe6-1.2) ...\n",
-            "Selecting previously unselected package tesseract-ocr-osd.\n",
-            "Preparing to unpack .../tesseract-ocr-osd_4.00~git24-0e00fe6-1.2_all.deb ...\n",
-            "Unpacking tesseract-ocr-osd (4.00~git24-0e00fe6-1.2) ...\n",
-            "Selecting previously unselected package tesseract-ocr.\n",
-            "Preparing to unpack .../tesseract-ocr_4.00~git2288-10f4998a-2_amd64.deb ...\n",
-            "Unpacking tesseract-ocr (4.00~git2288-10f4998a-2) ...\n",
-            "Setting up tesseract-ocr-osd (4.00~git24-0e00fe6-1.2) ...\n",
-            "Setting up tesseract-ocr-eng (4.00~git24-0e00fe6-1.2) ...\n",
-            "Setting up tesseract-ocr (4.00~git2288-10f4998a-2) ...\n",
-            "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "0G4TECkXlkSn",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 580
-        },
-        "outputId": "4c4f7391-857a-4afd-ab16-db0d45d1a0ba"
+        "colab": {}
       },
       "source": [
         "!sudo apt install libtesseract-dev"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Reading package lists... Done\n",
-            "Building dependency tree       \n",
-            "Reading state information... Done\n",
-            "The following package was automatically installed and is no longer required:\n",
-            "  libnvidia-common-440\n",
-            "Use 'sudo apt autoremove' to remove it.\n",
-            "The following additional packages will be installed:\n",
-            "  libleptonica-dev\n",
-            "The following NEW packages will be installed:\n",
-            "  libleptonica-dev libtesseract-dev\n",
-            "0 upgraded, 2 newly installed, 0 to remove and 77 not upgraded.\n",
-            "Need to get 2,755 kB of archives.\n",
-            "After this operation, 13.8 MB of additional disk space will be used.\n",
-            "Get:1 http://archive.ubuntu.com/ubuntu bionic/universe amd64 libleptonica-dev amd64 1.75.3-3 [1,308 kB]\n",
-            "Get:2 http://archive.ubuntu.com/ubuntu bionic/universe amd64 libtesseract-dev amd64 4.00~git2288-10f4998a-2 [1,447 kB]\n",
-            "Fetched 2,755 kB in 1s (2,893 kB/s)\n",
-            "debconf: unable to initialize frontend: Dialog\n",
-            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 76, <> line 2.)\n",
-            "debconf: falling back to frontend: Readline\n",
-            "debconf: unable to initialize frontend: Readline\n",
-            "debconf: (This frontend requires a controlling tty.)\n",
-            "debconf: falling back to frontend: Teletype\n",
-            "dpkg-preconfigure: unable to re-open stdin: \n",
-            "Selecting previously unselected package libleptonica-dev.\n",
-            "(Reading database ... 144426 files and directories currently installed.)\n",
-            "Preparing to unpack .../libleptonica-dev_1.75.3-3_amd64.deb ...\n",
-            "Unpacking libleptonica-dev (1.75.3-3) ...\n",
-            "Selecting previously unselected package libtesseract-dev.\n",
-            "Preparing to unpack .../libtesseract-dev_4.00~git2288-10f4998a-2_amd64.deb ...\n",
-            "Unpacking libtesseract-dev (4.00~git2288-10f4998a-2) ...\n",
-            "Setting up libleptonica-dev (1.75.3-3) ...\n",
-            "Setting up libtesseract-dev (4.00~git2288-10f4998a-2) ...\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "el9jeB9mltVk",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 193
-        },
-        "outputId": "bf324c1c-cd02-4518-f65c-75b1799decd8"
+        "colab": {}
       },
       "source": [
         "!sudo pip install pytesseract"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting pytesseract\n",
-            "  Downloading https://files.pythonhosted.org/packages/1d/d8/521db389ff0aae32035bfda6ed39cb2c2e28521c47015f6431f07460c50a/pytesseract-0.3.4.tar.gz\n",
-            "Requirement already satisfied: Pillow in /usr/local/lib/python3.6/dist-packages (from pytesseract) (7.0.0)\n",
-            "Building wheels for collected packages: pytesseract\n",
-            "  Building wheel for pytesseract (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pytesseract: filename=pytesseract-0.3.4-py2.py3-none-any.whl size=13431 sha256=1abf97c59159d4c851e5982e283e98c29984138324581d75b417ce41deb8e645\n",
-            "  Stored in directory: /root/.cache/pip/wheels/63/2a/a0/7596d2e0a73cf0aeffd6f6170862c4e73f3763b7827e48691a\n",
-            "Successfully built pytesseract\n",
-            "Installing collected packages: pytesseract\n",
-            "Successfully installed pytesseract-0.3.4\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "GYviFwTBl0wg",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 140
-        },
-        "outputId": "485462ee-956f-4be5-fb25-803696900ba8"
+        "colab": {}
       },
       "source": [
         "!tesseract --version"
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "tesseract 4.0.0-beta.1\n",
-            " leptonica-1.75.3\n",
-            "  libgif 5.1.4 : libjpeg 8d (libjpeg-turbo 1.5.2) : libpng 1.6.34 : libtiff 4.0.9 : zlib 1.2.11 : libwebp 0.6.1 : libopenjp2 2.3.0\n",
-            "\n",
-            " Found AVX2\n",
-            " Found AVX\n",
-            " Found SSE\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "I3wAk2CNmsuu",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 125
-        },
-        "outputId": "0287ffc2-9066-4d78-d7d8-5887b6fc2505"
+        "colab": {}
       },
       "source": [
         "from google.colab import drive\n",
@@ -321,20 +115,8 @@
         "\n",
         "filename = ('/content/drive/My Drive/VPR19 TEXT IMAGES/test img2.jpg')"
       ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
